Align buttons and fix outline

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,14 +13,14 @@ html {
 }
 
 .page {
-  margin: auto;
-  padding: 133px 29px 131px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #1b1919;
   color: var(--main-color);
   font-size: 18px;
   font-family: 'Fira Sans Condensed', sans-serif;
   block-size: 100%;
-  overflow: auto;
 }
 
 h1,
@@ -93,16 +93,14 @@ ol {
   display: flex;
   flex-direction: row;
   gap: 30px;
-  block-size: 100%;
-  inline-size: 100%;
   justify-content: center;
 }
 
 .result {
   display: flex;
   flex-direction: column;
+  padding: 78px 1px 2px;
   justify-content: space-between;
-  padding-top: 78px;
 }
 
 .result__video-container {
@@ -122,7 +120,6 @@ ol {
 .search-form {
   display: flex;
   flex-direction: row;
-  gap: 40px;
   justify-content: space-between;
 }
 
@@ -236,9 +233,6 @@ ol {
   display: flex;
   flex-direction: column;
   gap: 27px;
-  inline-size: 399px;
-  block-size: 100%;
-  padding: 2px 1px 0;
 }
 
 .title {
@@ -260,6 +254,8 @@ ol {
   flex-direction: column;
   gap: 32px;
   overflow: hidden auto;
+  block-size: 298px;
+  padding: 0 2px 2px;
 }
 
 .content__card-link {
